fix: light, dark mode toggler

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
 
+@theme {
+    --color-neon-blue: #00f3ff;
+    --color-neon-purple: #bc13fe;
+    --color-neon-pink: #ff00ff;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
+@source '../**/*.jsx';
